tests/error/null_array_access_multi.gw
// [contains] NullPointerException:
int i[][];
i[0][0];
